# wgpu-2d-game

./: Cargo.toml  README.md
.github/workflows/: release.yml
bomberjack/: Cargo.toml
bomberjack/src/: lib.rs  main.rs
bomberjack/src/game/: bomb.rs  jack.rs  mod.rs
engine/: Cargo.toml
engine/src/: lib.rs
engine/src/rendering/: camera.rs  mod.rs  texture.rs
engine/src/rendering/pipelines/: sprite.rs  square.rs
engine/src/rendering/shaders/: sprite.wgsl  square.wgsl
engine/src/rendering/shapes/: mod.rs
src/: input.rs  lib.rs  main.rs
src/assets/: texture.json
src/game/: bomb.rs  jack.rs  mod.rs
src/rendering/: camera.rs  camera2d.rs  mod.rs
src/rendering/pipelines/: mod.rs  sprite.rs  square.rs  tutorial3.rs  tutorial4.rs
src/rendering/pipelines/squares/: mod.rs  sprite.rs  square.rs  textured_square.rs
src/shaders/: square.wgsl  textured_square.wgsl  tutorial3.wgsl  tutorial4.wgsl
src/shapes/: mod.rs
