[package]
name = "wgpu-2d-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.18.0"
wgpu = "0.12.0"
pollster = "0.2.5"
winit = "0.26.1"
env_logger = "0.9.0"
log = "0.4.16"
bytemuck = {version = "1.9.1", features = ["derive"]}
