[package]
name = "bomberjack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.18.0"
pollster = "0.2.5"
winit = "0.28.3"
env_logger = "0.9.0"
log = "0.4.16"
enum-map = "2.1.0"
engine = { path = "../engine"}
