[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

anyhow = "1.0.56"
bytemuck = {version = "1.9.1", features = ["derive"]}
cgmath = "0.18.0"
image = {version = "0.24.1", default-features = false, features = ["jpeg", "png"]}
wgpu = "0.12.0"
wgpu_glyph = "0.16.0"
winit = "0.26.1"
